--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Michael Brandmeyer",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^6.10.1",
+    "@quixo3/prisma-session-store": "^3.1.13",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "connect-pg-simple": "^10.0.0",
