--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "test node",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npm install && npx prisma generate && npx prisma migrate deploy",
+    "start": "node index.js"
   },
   "author": "Michael Brandmeyer",
   "license": "ISC",
