--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm install && npx prisma generate && npx prisma migrate deploy",
+    "build": "npm install npx prisma migrate deploy",
     "start": "node index.js"
   },
   "author": "Michael Brandmeyer",
